# pokettrpg

./: .gitignore  AGENTS.md  CHANGELOG.md  Caddyfile  FIXES_SUMMARY.md  main.ts  release.ps1
.github/: copilot-instructions.md
.github/workflows/: deploy-pwa.yml  pages.yml  release-mac.yml  release-win.yml  release.yml
_rules_import/: Main rules.md
app/: DO_NOT_USE.md  README.md  RELEASE_NOTES.md  electron-builder.yml  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
app/docs/: lan-networking.md
app/electron/: main.mjs  (+1 more)
docs/: MACOS_INSTALL.md  SPRITE_MAKER_SPEC.md  TAURI_ONLY_RELEASE_POLICY.md
more pokemon/: wylin-missing-sprites.txt
pokemonttrpg-backend/: test-forceswitch.js
scripts/: Start-Worker.ps1  ai_fusion_generator.py  deploy-pi-backend.py  deploy-pi-fan-data.py  download_delta_sprites.py  generate_creative_fusions.py  generate_wylin_customs.mjs  import_sage_fandom.py  patch-wylin-data.mjs  patch-wylin-megastones.mjs  runpod_fusion_batch.py  sprite-manager-ui.js  sync_ifdex_sprites.py  test-battle.js  test-nuclear-battle.js  test_fusions.py  update-wylin-sprites.mjs
tauri-app/: .env.tauri  README.md  build_output.txt  build_output2.txt  build_output3.txt  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
tauri-app/src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: lib_disabled.rs  main.rs
tauri-app/src-tauri/src/sync/: commands.rs  fusion.rs  mod.rs  state.rs  websocket.rs
(+316 files in other folders)
