[package]
name = "app"
version = "1.5.1"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[features]
default = []
app-lib = []

[lib]
name = "app_lib"
path = "src/lib_disabled.rs"
crate-type = ["staticlib", "cdylib", "rlib"]
required-features = ["app-lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-websocket = "2"
tokio = { version = "1", features = ["full", "sync"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
url = "2"
thiserror = "1"
regex = "1"
walkdir = "2"
